--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,9 @@ theme:
       toggle:
         icon: material/brightness-7 
         name: Switch to dark mode
+#EDIT SETTINGS
+  features:
+    - content.action.edit
 
 #LOGO
   logo: assets/images/brain.png
@@ -33,3 +36,7 @@ markdown_extensions:
   - admonition
   - pymdownx.details
   - pymdownx.superfences
+
+
+# Edit Page
+edit_uri: edit/main/docs/
